err/dimarray.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dimarray'...
Compiling './lib/python3.5/site-packages/dimarray/__init__.py'...
***   File "./lib/python3.5/site-packages/dimarray/__init__.py", line 28
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dimarray/compat'...
Compiling './lib/python3.5/site-packages/dimarray/config.py'...
***   File "./lib/python3.5/site-packages/dimarray/config.py", line 69
    print "Options description:"
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dimarray/convert'...
Listing './lib/python3.5/site-packages/dimarray/core'...
Compiling './lib/python3.5/site-packages/dimarray/core/align.py'...
***   File "./lib/python3.5/site-packages/dimarray/core/align.py", line 136
    except AssertionError, msg:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dimarray/core/axes.py'...
***   File "./lib/python3.5/site-packages/dimarray/core/axes.py", line 468
    print error.message
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dimarray/core/bases.py'...
***   File "./lib/python3.5/site-packages/dimarray/core/bases.py", line 83
    print self.summary_repr()
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dimarray/core/indexing.py'...
***   File "./lib/python3.5/site-packages/dimarray/core/indexing.py", line 213
    print size, np.size(ix)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dimarray/datasets'...
Listing './lib/python3.5/site-packages/dimarray/datasets/data'...
Listing './lib/python3.5/site-packages/dimarray/geo'...
Listing './lib/python3.5/site-packages/dimarray/io'...
Compiling './lib/python3.5/site-packages/dimarray/io/nc.py'...
***   File "./lib/python3.5/site-packages/dimarray/io/nc.py", line 178
    print error
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dimarray/lib'...
Compiling './lib/python3.5/site-packages/dimarray/testing.py'...
***   File "./lib/python3.5/site-packages/dimarray/testing.py", line 123
    print actual[k]
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dimarray-0.2.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
